--- a/newlib/libc/sys/telos/Makefile.in
+++ b/newlib/libc/sys/telos/Makefile.in
@@ -76,8 +76,8 @@ lib_a_AR = $(AR) $(ARFLAGS)
 @MAY_SUPPLY_SYSCALLS_TRUE@	ioctl.o isatty.o kill.o link.o \
 @MAY_SUPPLY_SYSCALLS_TRUE@	lseek.o mkdir.o mknod.o mmap.o \
 @MAY_SUPPLY_SYSCALLS_TRUE@	mount.o nanosleep.o open.o opendir.o \
-@MAY_SUPPLY_SYSCALLS_TRUE@	pread.o pwrite.o read.o readdir.o \
-@MAY_SUPPLY_SYSCALLS_TRUE@	rename.o rmdir.o sbrk.o \
+@MAY_SUPPLY_SYSCALLS_TRUE@	pipe.o pread.o pwrite.o read.o \
+@MAY_SUPPLY_SYSCALLS_TRUE@	readdir.o rename.o rmdir.o sbrk.o \
 @MAY_SUPPLY_SYSCALLS_TRUE@	sched_yield.o sigaction.o signal.o \
 @MAY_SUPPLY_SYSCALLS_TRUE@	sigprocmask.o sigqueue.o \
 @MAY_SUPPLY_SYSCALLS_TRUE@	sigsuspend.o sigwait.o sleep.o \
@@ -209,10 +209,10 @@ INCLUDES = -I$(srcdir)/include $(NEWLIB_CFLAGS) $(CROSS_CFLAGS) $(TARGET_CFLAGS)
 AM_CCASFLAGS = $(INCLUDES)
 noinst_LIBRARIES = lib.a
 @MAY_SUPPLY_SYSCALLS_FALSE@extra_objs = 
-@MAY_SUPPLY_SYSCALLS_TRUE@extra_objs = _exit.o alarm.o aligned_alloc.o chdir.o clock.o close.o closedir.o dir.o dup.o dup2.o environ.o execve.o fcntl.o fork.o getpid.o gettimeofday.o ioctl.o isatty.o kill.o link.o lseek.o mkdir.o mknod.o mmap.o mount.o nanosleep.o open.o opendir.o pread.o pwrite.o read.o readdir.o rename.o rmdir.o sbrk.o sched_yield.o sigaction.o signal.o sigprocmask.o sigqueue.o sigsuspend.o sigwait.o sleep.o stat.o timer.o times.o truncate.o umount.o unlink.o wait.o write.o
+@MAY_SUPPLY_SYSCALLS_TRUE@extra_objs = _exit.o alarm.o aligned_alloc.o chdir.o clock.o close.o closedir.o dir.o dup.o dup2.o environ.o execve.o fcntl.o fork.o getpid.o gettimeofday.o ioctl.o isatty.o kill.o link.o lseek.o mkdir.o mknod.o mmap.o mount.o nanosleep.o open.o opendir.o pipe.o pread.o pwrite.o read.o readdir.o rename.o rmdir.o sbrk.o sched_yield.o sigaction.o signal.o sigprocmask.o sigqueue.o sigsuspend.o sigwait.o sleep.o stat.o timer.o times.o truncate.o umount.o unlink.o wait.o write.o
 lib_a_SOURCES = 
 lib_a_LIBADD = $(extra_objs)
-EXTRA_lib_a_SOURCES = _exit.c alarm.c aligned_alloc.c chdir.c clock.c close.c closedir.c dir.c dup.c dup2.c environ.c execve.c fcntl.c fork.c getpid.c gettimeofday.c ioctl.c isatty.c kill.c link.c lseek.c mkdir.c mknod.c mmap.c mount.c nanosleep.c open.c opendir.c pread.c pwrite.c read.c readdir.c rename.c rmdir.c sbrk.c sched_yield.c sigaction.c signal.c sigprocmask.c sigqueue.c sigsuspend.c sigwait.c sleep.c stat.c timer.c times.c truncate.c umount.c unlink.c wait.c write.c crt0.s
+EXTRA_lib_a_SOURCES = _exit.c alarm.c aligned_alloc.c chdir.c clock.c close.c closedir.c dir.c dup.c dup2.c environ.c execve.c fcntl.c fork.c getpid.c gettimeofday.c ioctl.c isatty.c kill.c link.c lseek.c mkdir.c mknod.c mmap.c mount.c nanosleep.c open.c opendir.c pipe.c pread.c pwrite.c read.c readdir.c rename.c rmdir.c sbrk.c sched_yield.c sigaction.c signal.c sigprocmask.c sigqueue.c sigsuspend.c sigwait.c sleep.c stat.c timer.c times.c truncate.c umount.c unlink.c wait.c write.c crt0.s
 lib_a_DEPENDENCIES = $(extra_objs)
 lib_a_CCASFLAGS = $(AM_CCASFLAGS)
 lib_a_CFLAGS = $(AM_CFLAGS)
@@ -443,6 +443,12 @@ lib_a-opendir.o: opendir.c
 
 lib_a-opendir.obj: opendir.c
 	$(CC) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(AM_CPPFLAGS) $(CPPFLAGS) $(lib_a_CFLAGS) $(CFLAGS) -c -o lib_a-opendir.obj `if test -f 'opendir.c'; then $(CYGPATH_W) 'opendir.c'; else $(CYGPATH_W) '$(srcdir)/opendir.c'; fi`
+
+lib_a-pipe.o: pipe.c
+	$(CC) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(AM_CPPFLAGS) $(CPPFLAGS) $(lib_a_CFLAGS) $(CFLAGS) -c -o lib_a-pipe.o `test -f 'pipe.c' || echo '$(srcdir)/'`pipe.c
+
+lib_a-pipe.obj: pipe.c
+	$(CC) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(AM_CPPFLAGS) $(CPPFLAGS) $(lib_a_CFLAGS) $(CFLAGS) -c -o lib_a-pipe.obj `if test -f 'pipe.c'; then $(CYGPATH_W) 'pipe.c'; else $(CYGPATH_W) '$(srcdir)/pipe.c'; fi`
 
 lib_a-pread.o: pread.c
 	$(CC) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(AM_CPPFLAGS) $(CPPFLAGS) $(lib_a_CFLAGS) $(CFLAGS) -c -o lib_a-pread.o `test -f 'pread.c' || echo '$(srcdir)/'`pread.c
